# mangojuice

./: .gitignore  README.md  README.ru.md  meson.build  test
.github/workflows/: arch-build.yml  build-appimage.yml  build-flatpak.yml  build-windows.yml
.zed/: tasks.json
build-aux/: mangojuice-appimage.sh
build-aux/flatpak/: git-io.github.radiolamp.mangojuice.json  io.github.radiolamp.mangojuice.json  io.github.radiolamp.mangojuice.yml
build-aux/flatpak/patches/: 0001-wayland-dlopen-correct-library.patch
data/: com.radiolamp.mangojuice.desktop  gresource.xml  io.github.radiolamp.mangojuice.desktop  io.github.radiolamp.mangojuice.desktop.in.in  io.github.radiolamp.mangojuice.gresource.xml  io.github.radiolamp.mangojuice.gschema.xml  io.github.radiolamp.mangojuice.metainfo.xml  io.github.radiolamp.mangojuice.metainfo.xml.in.in  io.github.radiolamp.mangojuice.yml  meson.build  resources.gresource.xml  style.css
data/icons/: meson.build
data/ui/: block.blp  extras-page.blp  metrics-page.blp  performance-page.blp  titled-switch.blp  visual-page.blp  window.blp
docs/: DONATE.md  README-ru.md  RU-README.md
flatpak/: io.github.radiolamp.mangojuice.yml
po/: LINGUAS  POTFILES  mangojuice.pot  meson.build  pt_BR.mo  pt_BR.po  ru.mo  ru.po  ru_RU.mo  ru_RU.po  update_potfiles.sh
src/: OtherBox.vala  about.vala  about_dialog.vala  advanced.vala  application.vala  config.vapi  dialog.vala  game_manager.vala  intel_power_fix_handler.vala  load-states.vala  load_states.vala  main.vala  mangojuice.vala  meson.build  mload.vala  msave.vala  reset_manager.vala  save-states.vala  save_states.vala  utils.vala  values-manager.vala  window.vala
src/other/: OtherBox.vala  other_load.vala  other_save.vala
src/pages/: extras.vala  metrics.vala  page.vala  performance.vala  visual.vala
src/pro/: pro_box.vala
src/widgets/: block.vala  titled-switch.vala
